--- a/src/binary.tex
+++ b/src/binary.tex
@@ -3,7 +3,7 @@
 
 Here we are, ground zero in every book about assembly programming. Where the reader
 finds themselves in an awkdward sit-down discussion about the B word. It's a necessary evil
-of course. Nothing will ever make sense without a rudimentary but slowly growing
+of course. Nothing will ever make sense without a rudimentary but slowly developing
 grasp of what bytes are and why they keep being referred to in a confusing mixture
 of letters and numbers such as \icode{\$D012} and \icode{\$F4}.
 
