--- a/src/planets/planet1Charset_$40_bits_inv.tex
+++ b/src/planets/planet1Charset_$40_bits_inv.tex
@@ -58,6 +58,6 @@
 
           \end{tikzpicture}
         \end{adjustbox}
-      }\caption{Inverted \$40}
+      }\caption{An Upside Down Piece of Sea}
     \end{figure}
     
