--- a/src/planets/planet1Charset_$40_bits_inv_1.tex
+++ b/src/planets/planet1Charset_$40_bits_inv_1.tex
@@ -61,6 +61,6 @@
 
           \end{tikzpicture}
         \end{adjustbox}
-      }\caption{Inverted \$40 }
+      }
+   \vspace{-0.5cm} 
     \end{figure}
-    
