--- a/src/disassembly.tex
+++ b/src/disassembly.tex
@@ -7,13 +7,12 @@ cryptic, and you shouldn't expect to understand it yet, this code is not exactly
 
 
 \begin{lstlisting}[caption=The first piece of machine code that is executed in Iridis Alpha.,escapechar=\%]
-78A9 408D 1903 A900 8D18 03A9 108D
-04DD A900 8D05 DDA9 7F8D 0DDD A981
-8D0D DDA9 198D 0EDD 584C 3508 
+78A9 408D 1903 A900 8D18 03A9 108D 04DD A900 8D05
+DDA9 7F8D 0DDD A981 8D0D DDA9 198D 0EDD 584C 3508 
 \end{lstlisting}
 
 That's right it executed a stream of bytes. A stream of bytes commonly referred to as 'machine code'. Each of these
-bytes is meaningful to the C64 whether individually, or taken in pairs, or groups of three. It can comprehend them
+bytes is meaningful to the C64 whether individually, or taken in pairs, or even in groups of three. It can comprehend them
 as instructions to carry out that will shuffle data around in its memory and ultimately result in a game that
 can be played.
 
@@ -27,6 +26,37 @@ The process is called disassembly simply because it is the exact reverse of the 
 to generate the data on the tape from the assembly language written by Jeff Minter in the first place. Programs that
 do this are referred to as 'assemblers'. They assemble the instructions written by the programmer into machine code
 that the C64 can execute. As self-appointed disassemblers we are going to turn it back into assembly language.
+
+\begin{definition}[Jeffrey Says]
+\setlength{\intextsep}{0pt}%
+\setlength{\columnsep}{3pt}%
+\begin{wrapfigure}{l}{0.12\textwidth}
+\includegraphics[width=\linewidth]{src/callout/ia.jpg} 
+\end{wrapfigure}
+\small
+
+According to Jeff Minter's development diary, Iridis Alpha was programmed and "assembled
+on a C128 using a partially-finished JCL assembler and the horrible, slow
+Commodore disk drives." 
+You've read that correctly: Iridis Alpha was not written
+on a C64 but its more powerful and expensive, and hence much less popular, successor
+the C128. 
+
+\begin{figure}[H]
+  {
+    \begin{adjustbox}{width=7cm,center}
+      \frame{\surface{disassembly/jcl.png}}
+    \end{adjustbox}
+  }\caption[]{The 1984 JCL Assember on the C128. You can imagine how user-friendly this thing must have been.}
+\end{figure}
+This wasn't so uncommon back in the day: computers like the C64 were not
+powerful enough for getting any actual work done (such as writing and assembling a game),
+so the programming and assembling was done on more capable, but often prohibitively expensive,
+microcomputers. As long as the assembler was configured to output a file that could be run on
+the C64, actual development could be done on any system the developer found tolerable. Or as
+  Minter put it: "Next time I'm gonna use a 6502 X-ASM running in 2.5 Megabytes of RAM on 
+  me trusty [Atari] ST..."
+\end{definition}
 
 Along the way we will have to invent names for things that are meaningful to us: the names Jeff Minter gave to his
 functions, routines, and variables are long since lost to us. They were thrown away by the assembler as unnecessary
@@ -75,13 +105,14 @@ A9 & LDA & \\
 Let's quickly explain what two of these mean as they're extremely common and also fundamental to
 machine code programming in general.
 
-\icode{LDA} loads the byte you give it into a small one-byte slot called the 'Accumulator' ('A' for short
+\icode{LDA} loads the byte you give it into a small one-byte slot called the 'Accumulator' ('A' for short,
 so \icode{LDA} is an abbreviation for 'Load to Accumulator'). Think of this slot
 as a pocket - somewhere for the CPU to store a value for use later on. The technical name for this kind of 
 slot/pocket is a 'register\index{register}'. The 'Accumulator' is so-called because a lot of the operations performed on
 bytes stored in this particular pocket have very precise behaviour when addition operations are executed on
 it. But we never really have to worry about this too often and in the general case it is simply used, as
 here, as a place to put a value so we can do something else with it.
+\clearpage
 
 \begin{lstlisting}[caption=Loading the byte \$40 to the \icode{Accumulator}.,escapechar=\%]
 LDA #$40
@@ -92,8 +123,8 @@ the \icode{STA} instruction comes in. This stores the value in the 'Accumulator'
 in memory that you give to it. As we can see such addresses are not one byte long, but two bytes. Are they
 ever more than two bytes long? No, and for a very simple reason. The C64 can only understand addresses
 that are at most two bytes long and this is what ultimately limits it to 64KB of memory. The largest address it can understand
-is therefore \icode{\$FFFF} - the largest value that can be expressed by 2 bytes. Which translates to 65,532.
-65,532 bytes is 64KB of RAM. 
+is therefore \icode{\$FFFF} - the largest value that can be expressed by 2 bytes. Which translates to 65,536.
+65,536 bytes is 64KB of RAM. 
 
 When we look at the disassembly of the STA instructions we see something quite puzzling:
 
@@ -121,26 +152,26 @@ with the most significant digits first, i.e. \icode{\$0319}. But most computer a
 expectation - reading the least significant digits first, or the least significant bits first since
 this is a computer we're talking about, i.e. \icode{\$1903}. This approach possesses a couple of advantages,
 the main one being that the computer can start performing an operation on the number (e.g. addition) before it
-has read all of it. For example, if you're adding 5312 and 2043 you already have enought to get started with once
+has read all of it. For example, if you're adding 5312 and 2043 you already have enough to get started with once
 you've read 12 and 43. The carrying etc. can all happen once you've read the rest of the two numbers. This approach
-is known as 'little-endian' byte ordering. The opposite, which is closer to what we are familiar with when
-reading numbers ourselves, is called 'big-endian'. If you had never heard of either of those terms before, then
+is known as `little-endian' byte ordering. The opposite, which is closer to what we are familiar with when
+reading numbers ourselves, is called `big-endian'. If you had never heard of either of those terms before, then
 you have now.
 
 The next incremental step in understanding our disassembly is to apply some meaning to these two-byte values
 that we've decoded. As it happens, all the ones given in this piece of code represent addresses in the C64's
-memory of \icode{\$FFFF} bytes, or in the preferred parlance of we humans, 65,532 bytes. Each address here
+memory of \icode{\$FFFF} bytes, or in the preferred parlance of we humans, 65,536 bytes. Each address here
 has a particular function\index{function} so storing a value in it does something. Let's add the meanings, which are still
 a little cryptic, to our listing:
 
 \begin{minipage}[b]{0.20\linewidth}
 \centering
-\lstinputlisting[caption=Assembly]{disassembly/disassembled-bytes.asm}
+\lstinputlisting[title=Assembly]{disassembly/disassembled-bytes.asm}
 \end{minipage}
 \hspace{0.5cm}
 \begin{minipage}[b]{0.70\linewidth}
 \centering
-\lstinputlisting[caption=Assembly Language with some comments]{disassembly/labelled-bytes-1.asm}
+\lstinputlisting[title=Assembly Language with some comments]{disassembly/labelled-bytes-1.asm}
 \end{minipage}
 
 As you may remember we said in the previous chapter that this little routine\index{routine} is doing two things: the first
@@ -203,7 +234,7 @@ to start executing whatever is at address \$4000.
 						  };
       \end{tikzpicture}
     \end{adjustbox}
-  }\caption{The slice of C64 memory at addresses \$0315 and \$031C and the bytes that live there after we've
+  }\caption{The slice of C64 memory between addresses \$0315 and \$031C and the bytes that live there after we've
 written \icode{\$40} to \icode{\$0319} and \$00 to \$0318.}
 \end{figure}
 
@@ -212,8 +243,8 @@ pairs of bytes is observed again here. When the CPU reads the contents of \icode
 it interprets them not as \icode{\$0040}, which is the order in which they appear to us, but as \icode{\$4000}.
 
 When discussing this storage arrangement we refer to the contents of \icode{\$0318} as the 'Low Byte' and the
-contents of \icode{\$0319} as the 'High Byte'. 'High' is just another way of saying 'first', and 'Low' another
-way of saying 'second. When taking about a values like \icode{\$4000} stored in \icode{\$0318-\$0319} such as in this case \icode{\$40} is the
+contents of \icode{\$0319} as the `High Byte'. `High' is just another way of saying 'first', and 'Low' another
+way of saying `second'. When taking about a values like \icode{\$4000} stored in \icode{\$0318-\$0319} such as in this case \icode{\$40} is the
 'High Byte' and \icode{\$00} is the 'Low Byte'.
 
 Writing values to a pair of adjacent addresses in memory like this so that they can
@@ -221,7 +252,7 @@ be subsequently interpreted as yet another address to get something from or do s
 pattern\index{pattern} in programming 6502 CPUs such as the C64's and we will encounter it a *lot* in this book.
 
 It's a strange sort of indirection when you first attempt to understand it. Instead of storing actual values
-at an address we're storing an address in the address. If you are familiar with other programming languages
+at an address, we're storing an \textit{address} in the address. If you are familiar with other programming languages
 you may already recognize this concept and understand how powerful it can be. If you are not it will probably
 seem strange and maybe even wasteful. Seeing the many uses it is put to in the Iridis Alpha code may persuade
 you otherwise, but hopefully when we look at the use it is put to here you may begin to get a flavor of its
@@ -241,7 +272,7 @@ as an address to jump to and start executing the next time the 6502 CPU 'wakes u
 The technical term for this 'waking up' is an 'interrupt\index{interrupt}'. This waking up happens incredibly frequently, 60 times every second.
 60 times a second the C64 will stop what it's doing and execute whatever is given as an address by the bytes at \icode{\$0318-\$0319}.
 
-The number 60 may ring a bell for you in this context. A common aspiration for graphics\index{graphics}-based games, and minimum table stakes today,
+The number 60 may ring a bell for you in this context. A common aspiration for graphics\index{graphics}-based games, and minimum table-stakes today,
 is that a game runs at 60 'frames per second'. In other words, that at least 60 times a second the display is updated and whatever
 is on the screen\index{screen} moves a little bit.
 
