--- a/src/planets/planet1Charset_$40_bits_inv_2.tex
+++ b/src/planets/planet1Charset_$40_bits_inv_2.tex
@@ -61,6 +61,7 @@
 
           \end{tikzpicture}
         \end{adjustbox}
-      }\caption{Inverted \$40 }
+      }
+  \vspace{-0.5cm}
     \end{figure}
     
