--- a/src/titlescreen.tex
+++ b/src/titlescreen.tex
@@ -1,9 +1,24 @@
 \chapter{The First 16 Milliseconds} 
 \label{sec:first16}
 \lstset{style=6502Style}
+OK, where were we? At the end of \hyperref[sec:archaeo]{\textcolor{blue}{A Little Archaeology}}
+we were just about to get started and start the race to get something up on the screen.
+We had set up an interrupt to make us jump to \icode{MainControlLoop} at address \icode{\$4000}.
 
-The race is now on to get the title sequence\index{sequence} up on the screen\index{screen}. After a little more setup in \icode{MainControlLoop\index{MainControlLoop}}
-we call a routine\index{routine} to set up the main title screen\index{screen}:
+Our first act, which we covered briefly in the previous chapter, was to make sure that interrupt didn't
+have us jumping here again. So we overwrote the interrupt handler with a new address:
+
+\begin{lstlisting}[caption=The code at \icode{\$4000}. ,escapechar=\%]
+MainControlLoop%\index{MainControlLoop}%
+        LDA #$00
+        SEI
+p4003   LDA #<MainControlLoopInterruptHandler%\index{MainControlLoopInterruptHandler}%
+        STA $318    ;NMI
+        LDA #>MainControlLoopInterruptHandler%\index{MainControlLoopInterruptHandler}%
+        STA $319    ;NMI
+\end{lstlisting}
+
+Our next act is to call a routine\index{routine} to set up the main title screen\index{screen}:
 
 \begin{lstlisting}[caption=In \icode{MainControlLoop\index{MainControlLoop}},escapechar=\%]
         ; Display the title screen%\index{screen}%. We'll stay in here until the
@@ -14,7 +29,7 @@ we call a routine\index{routine} to set up the main title screen\index{screen}:
 This brings us to a routine\index{routine} called \icode{InitializeSpritesAndInterruptsForTitleScreen\index{InitializeSpritesAndInterruptsForTitleScreen}} in
 which we do some vital setup for the next 16 milliseconds and how we go about getting everything
 on the screen\index{screen} that we need to:
-
+\clearpage
 
 \begin{lstlisting}[caption=In \icode{InitializeSpritesAndInterruptsForTitleScreen\index{InitializeSpritesAndInterruptsForTitleScreen}},escapechar=\%]
         ; Set up the our interrupt%\index{interrupt}% handler for the title
@@ -42,8 +57,9 @@ on the screen\index{screen} that we need to:
         STA $D012    ;Raster Position
 \end{lstlisting}
 
-You'll notice we've changed our interrupt\index{interrupt} handler again, this time to a routine\index{routine} called
-\icode{TitleScreenInterruptHandler\index{TitleScreenInterruptHandler}}. What we also do is make this interrupt\index{interrupt} something
+You'll notice we've changed yet another interrupt\index{interrupt} handler again, this time to a routine\index{routine} called
+\icode{TitleScreenInterruptHandler\index{TitleScreenInterruptHandler}}. The particular type of interrupt\index{interrupt} we're going
+to hand here is something
 called a 'Raster Interrupt\index{Interrupt}'. A 'raster' can be thought of as a beam of light that scans
 across the screen\index{screen} from top to bottom and left to right painting each pixel on the screen\index{screen}
 one at a time. It travels so quickly down and across the screen\index{screen} painting pixels that it
@@ -53,7 +69,7 @@ and allow us to run some code before it resumes again. We can do this as many ti
 we want along the journey, but each time we interrupt\index{interrupt} it we have to be quick. If our code
 takes too long the display will flicker and the content of the screen\index{screen} become inconsistent.
 
-In this routine\index{routine} we set our first interrupt\index{interrupt} to line 16 (\icode{\$10} on the screen\index{screen}:
+In this routine\index{routine} we set our first interrupt\index{interrupt} to line 16 (\icode{\$10}) on the screen\index{screen}:
 
 \begin{lstlisting}[caption=In \icode{InitializeSpritesAndInterruptsForTitleScreen\index{InitializeSpritesAndInterruptsForTitleScreen}},escapechar=\%]
         ; Set the position for triggering our interrupt%\index{interrupt}%.
@@ -74,7 +90,7 @@ The C64 makes 8 sprites\index{sprites} available to us. A sprite is a special pu
 can be up to 24 pixels wide by 20 pixels high. We can place them wherever we want on the
 screen\index{screen}. They are the core of graphics\index{graphics} programming and Iridis Alpha has dozens of them. But
 if the C64 only has 8 sprites\index{sprites}, are we limited to displaying just 8 sprites\index{sprites} at once on the
-screen\index{screen}? The simple answer is that thanks to Raster Interrupts we are not: when we run
+screen\index{screen}? The simple answer is that thanks to \textit{Raster Interrupts} we are not: when we run
 some code after receiving an interrupt\index{interrupt} we can place new sprites\index{sprites} wherever we like in any
 position that the raster hasn't reached yet. This means our only effective limitation is
 the number of sprites\index{sprites} we can place on a single line, which is eight. 
@@ -257,18 +273,17 @@ in detail we need to understand how this thing \icode{SCREEN\_RAM} works and how
 Our starting point for displaying text on screen\index{screen} is to define what our characters look like. We define the appearance
 of a character\index{character} using 8 bytes. This is what the definition of the stripe character\index{character} looks like: 
 
-\begin{lstlisting}[caption= The 'stripe' character\index{character}.,basicstyle=\tiny,escapechar=\%]
+\clearpage
+\begin{lstlisting}[caption= The 'stripe' character\index{character}.,escapechar=\%]
 characterSetData%\index{characterSetData}%
-        .BYTE $FF,$00,$FF,$00,$00,$FF,$00,$FF   ;.BYTE $FF,$00,$FF,$00,$00,$FF,$00,$FF
-                                                ; CHARACTER%\index{CHARACTER}% $00
-                                                ; 11111111   ********
-                                                ; 00000000           
-                                                ; 11111111   ********
-                                                ; 00000000           
-                                                ; 00000000           
-                                                ; 11111111   ********
-                                                ; 00000000           
-                                                ; 11111111   ********
+.BYTE $FF,          ; 11111111   ********
+.BYTE $00,          ; 00000000           
+.BYTE $FF,          ; 11111111   ********
+.BYTE $00,          ; 00000000           
+.BYTE $00,          ; 00000000           
+.BYTE $FF,          ; 11111111   ********
+.BYTE $00           ; 00000000           
+.BYTE $FF,          ; 11111111   ********
 \end{lstlisting}
 
 As you can see each byte translates to a row of 0s and 1s. Each 1 defines a dot and each 0 a blank space. We end up
@@ -284,7 +299,7 @@ character\index{character} is referred to as \icode{\$00}, the 'A' character\ind
 
 With our character\index{character} set defined we can now write some text to the screen\index{screen} ram. Note that when we write it \icode{SCREEN\_RAM}
 we're not yet writing it to the actual screen\index{screen}. This is just a place in memory that the raster (our beam of light)
-will refer to later when it is actually writing dots to the screen\index{screen}. If we write a stripe character\index{character} to a particulas position
+will refer to later when it is actually writing dots to the screen\index{screen}. If we write a stripe character\index{character} to a particular position
 in this \icode{SCREEN\_RAM} memory it will know to write it the corresponding position on the screen\index{screen}.
 
 \subsection{Drawing the Stripes}
@@ -370,7 +385,7 @@ of our screen\index{screen}.
 
 We've used a meaningful alias for each of the color values that we write, these are defined as:
 
-\begin{lstlisting}[caption=In \icode{DrawStripesBehindTitle\index{DrawStripesBehindTitle}},escapechar=\%]
+\begin{lstlisting}
 RED          = $02
 PURPLE       = $04
 GREEN        = $05
@@ -422,12 +437,12 @@ DrawTitleTextLoop%\index{DrawTitleTextLoop}%
 In this case we're not writing a single character\index{character} over and over, rather we're writing text we've defined elsewhere
 in variables \icode{titleScreenTextLine[1-5]}:
 
-\begin{lstlisting}[basicstyle=\tiny,caption=In \icode{DrawTitleScreenText\index{DrawTitleScreenText}},escapechar=\%]
-titleScreenTextLine1%\index{titleScreenTextLine1}%               .TEXT "IRIDIS ALPHA.....  HARD AND FAST ZAPPING%\index{ZAPPING}%"
-titleScreenTextLine2%\index{titleScreenTextLine2}%               .TEXT "PRESS FIRE TO BEGIN PLAY.. ONCE STARTED%\index{STARTED}%,"
-titleScreenTextLine3%\index{titleScreenTextLine3}%               .TEXT "F1 FOR PAUSE MODE     Q TO QUIT THE GAME"
-titleScreenTextLine4%\index{titleScreenTextLine4}%               .TEXT "CREATED BY JEFF MINTER...SPACE EASY/HARD"
-titleScreenTextLine5%\index{titleScreenTextLine5}%               .TEXT "LAST GILBY HIT 0000000; MODE IS NOW EASY"
+\begin{lstlisting}[caption=In \icode{DrawTitleScreenText\index{DrawTitleScreenText}},escapechar=\%]
+titleScreenTextLine1%\index{titleScreenTextLine1}%  .TEXT "IRIDIS ALPHA.....  HARD AND FAST ZAPPING%\index{ZAPPING}%"
+titleScreenTextLine2%\index{titleScreenTextLine2}%  .TEXT "PRESS FIRE TO BEGIN PLAY.. ONCE STARTED%\index{STARTED}%,"
+titleScreenTextLine3%\index{titleScreenTextLine3}%  .TEXT "F1 FOR PAUSE MODE     Q TO QUIT THE GAME"
+titleScreenTextLine4%\index{titleScreenTextLine4}%  .TEXT "CREATED BY JEFF MINTER...SPACE EASY/HARD"
+titleScreenTextLine5%\index{titleScreenTextLine5}%  .TEXT "LAST GILBY HIT 0000000; MODE IS NOW EASY"
 \end{lstlisting}
 
 In each iteration of the loop we write a character\index{character} to all five columns, plucking it from the position in
@@ -446,7 +461,8 @@ While writing text for the column we also set the color for each of the text lin
         STA COLOR_RAM%\index{COLOR\_RAM}% + LINE19_COL39%\index{LINE19\_COL39}%,X
 \end{lstlisting}
 
-Once it is done the \icode{COLOR\_RAM} has the appropriate lines set to grey:
+Once it is done the \icode{COLOR\_RAM} has the appropriate lines set to grey, in addition to the coloured stripes
+we added earlier:
 \input{titlescreen/titlescreen_color_ram}
 
 Now that we've looped through all 40 columns we have both \icode{SCREEN\_RAM} and \icode{COLOR\_RAM} fully
@@ -464,7 +480,7 @@ unpick as follow the raster on its journey to the bottom of the screen\index{scr
 \end{figure}
 
 \section{Racing the Beam}
-Now we're ready to receive our ifirst beam. You may remember we set this to happen when the raster reached line 16:
+Now we're ready to receive our first beam. You may remember we set this to happen when the raster reached line 16:
 
 \begin{lstlisting}[caption=In \icode{InitializeSpritesAndInterruptsForTitleScreen\index{InitializeSpritesAndInterruptsForTitleScreen}},escapechar=\%]
         ; Set the position for triggering our interrupt%\index{interrupt}%.
@@ -473,7 +489,7 @@ Now we're ready to receive our ifirst beam. You may remember we set this to happ
 \end{lstlisting}
 
 And that the routine\index{routine} we'll run when that happens is \icode{TitleScreenInterruptHandler\index{TitleScreenInterruptHandler}} (which itself will pass
-the work onto \icode{TitleScreenAnimation\index{TitleScreenAnimation}}:
+the work onto \icode{TitleScreenAnimation\index{TitleScreenAnimation}}):
 
 \begin{lstlisting}[caption=In \icode{InitializeSpritesAndInterruptsForTitleScreen\index{InitializeSpritesAndInterruptsForTitleScreen}},escapechar=\%]
         ; Set up the our interrupt%\index{interrupt}% handler for the title
@@ -485,7 +501,7 @@ the work onto \icode{TitleScreenAnimation\index{TitleScreenAnimation}}:
         STA $0315    ;IRQ
 \end{lstlisting}
 
-The painting of sprites\index{sprites} and playing of music as the screen\index{screen} gets painted\index{painted} is all handled by \icode{TitleScreenAnimation\index{TitleScreenAnimation}}.
+The painting of sprites\index{sprites} and playing of music as the screen\index{screen} gets painted\index{painted} is all handled by \icode{TitleScreen\-Animation\index{TitleScreenAnimation}}.
 This routine\index{routine} works by calling one of three different sub-routines each time its called. It picks the one to run
 depending on some internal state it maintains, all with a view to ensuring that the sprites\index{sprites} spelling out the game's
 title and the sprites\index{sprites} depicting the animated gilbies\index{gilbies} are updated and in place before the raster reaches them.
@@ -506,12 +522,12 @@ Of course we never actually see the screen\index{screen} in this state because i
 fast for us to observe. But as you can see the painting has aleady started. Everything above line 16 indicated in 
 the figure has been painted\index{painted} black, as per our preparation of \icode{SCREEN\_RAM} a little earlier.
 
-What our diagram above also tells us is that in this visit from the beam \icode{TitleScreenAnimation\index{TitleScreenAnimation}} chose to execute
+What our diagram above also tells us is that in this visit from the beam \icode{TitleScreen\-Animation\index{TitleScreenAnimation}} chose to execute
 the sub-routine\index{routine} \icode{DoStarfieldAnimation\index{DoStarfieldAnimation}} and that it took 127 CPU cycles to complete it. Since it takes the
 raster 63 cycles to do an entire line this means that by the time we've finished this piece of work, the raster will have
 moved on to the next line - which is why the diagram shows 17 rather than 16. Every time we get an interrupt\index{interrupt}, the 
-raster doesn't wait for us. We have to work quickly, especially if we're preparing graphics\index{graphics} on lines that its likely
-to reach soon. This is why each of these subroutines does as little as it can get away with to get the job done.
+raster doesn't wait for us. We have to work quickly, especially if we're preparing graphics\index{graphics} on lines that it's likely
+to reach soon. This is why each of these subroutines does as little as it can get away with in order to get the job done.
 
 The three sub-routines the work at each raster interrupt\index{interrupt} can get divvied out to are \icode{UpdateJumping\-GilbyPositionsAndColors},
 \icode{DoStarfieldAnimation\index{DoStarfieldAnimation}}, and a cluster of routines starting with \icode{UpdateTitleScreenSpriteColors\index{UpdateTitleScreenSpriteColors}}. The one
@@ -587,7 +603,7 @@ MaybeDoStarFieldOrTitleText%\index{MaybeDoStarFieldOrTitleText}%
 \end{lstlisting}
 
 Since \icode{Y} is zero at this point this means it referenced the first value in the array, which is \icode{\$48}:
-\begin{lstlisting}[basicstyle=\tiny,escapechar=\%]
+\begin{lstlisting}[escapechar=\%]
 titleScreenStarFieldYPosArray%\index{titleScreenStarFieldYPosArray}% .BYTE $48,$4E,$54,$5A,$60,$66,$6C,$72
                               .BYTE $78,$7E,$84,$8A,$90,$96,$9C,$A2
                               .BYTE $A8,$AE,$B4,$BA,$C0,$C6,$CC,$D2
@@ -683,7 +699,7 @@ between 0 and 255 we store in our 8-bit byte for 'Sprite 7' in \icode{\$D00E} an
 \end{figure}
 
 Since we are using 'Sprite 7' for painting the starfield\index{starfield} the bit we are interested in is bit 7. The way
-we're going to manage this value for the starfield\index{starfield} is by keeping array \icode{titleScreenStarfieldMSBXPosArray\index{titleScreenStarfieldMSBXPosArray}}
+we're going to manage this value for the starfield\index{starfield} is by keeping an array \icode{titleScreenStarfieldMSBXPosArray\index{titleScreenStarfieldMSBXPosArray}}
 that indicates whether the x co-ordinate for the current index is greater than 255. If the value in there
 indicates that it is we'll set our bit in \icode{\$D010} to 1.
 
@@ -691,16 +707,16 @@ So when
 we determine from looking in \icode{titleScreenStarfieldMSBXPosArray\index{titleScreenStarfieldMSBXPosArray}} that the x co-ordinate of the star is greater
 than 256..
 
-\begin{lstlisting}[basicstyle=\tiny,escapechar=\%]
+\begin{lstlisting}[escapechar=\%]
         LDA titleScreenStarfieldMSBXPosArray%\index{titleScreenStarfieldMSBXPosArray}% + $01,Y
         AND #$01
         STA spriteMSBXPosOffset%\index{spriteMSBXPosOffset}%
 \end{lstlisting}
 
 .. we set \icode{spriteMSBXPosOffset\index{spriteMSBXPosOffset}} to indicate that that's the case. That's all this step, with the help
-of the \icode{AND \#\$01} statement is doing. If 'Bit 1' is
+of the `\icode{AND \#\$01}' statement is doing. If `Bit 1' is
 set in the value we pluck from \icode{titleScreenStarfieldMSBXPosArray\index{titleScreenStarfieldMSBXPosArray}} it is just an indicator that the x co-ordinate
-for this star is greater than 256. So if we see a value of \icode{\$02} in there our operation \icode{AND \#\$01} will
+for this star is greater than 256. So if we see a value of \icode{\$02} in there our operation `\icode{AND \#\$01}' will
 give us a zero result, meaning the intended value of the x co-ordinate is not greater than 256, othwerise it will give
 us a non-zero result indicating that it is:
 
@@ -731,7 +747,7 @@ It means for us that the value of the x co-ordinate is not going to be greater t
 \icode{\$80} to \icode{spriteMSBXPosOffset\index{spriteMSBXPosOffset}} to overwrite the \icode{00} there. This will indicate that the value of the x co-ordinate
 is greater than 255.
 
-\begin{lstlisting}[basicstyle=\tiny,escapechar=\%]
+\begin{lstlisting}[escapechar=\%]
         BEQ StarFieldSkipMSB%\index{StarFieldSkipMSB}%
 
         LDA #$80
@@ -772,9 +788,9 @@ it is always set to zero:
   }\caption*{AND'ing \$F3 and \$00 gives \$73. It clears 'Bit 7' for us of whatever value was there originally.}
 \end{figure}
 
-Now when we perform an 'or' operation on the result with \icode{ORA spriteMSBXPosOffset\index{spriteMSBXPosOffset}} it will have the effect of just setting 'Bit 7'
+Now when we perform an 'or' operation on the result with `\icode{ORA spriteMSBXPosOffset\index{spriteMSBXPosOffset}}' it will have the effect of just setting 'Bit 7'
 with the value we've stored in \icode{spriteMSBXPosOffset\index{spriteMSBXPosOffset}}. In this case it remains at zero because that's what we have in
-\icode{spriteMSBXPosOffset\index{spriteMSBXPosOffset}} but if we have \icode{\$80} in there it would set it to 1: 
+\icode{spriteMSBXPosOffset\index{spriteMSBXPosOffset}}, but if we had \icode{\$80} in there it would set it to 1: 
 
 \begin{figure}[H]
   {
@@ -798,7 +814,7 @@ with the value we've stored in \icode{spriteMSBXPosOffset\index{spriteMSBXPosOff
 \end{figure}
 
 \subsection{Back to the Beam}
-Now that we've fixed the star's co-ordinates there's just two main things left to do before we're done with
+Now that we've fixed the star's co-ordinates there's just two more things left to do before we're done with
 handling this raster interrupt\index{interrupt}. One is to set the color of the star. We do this using a look-up array
 where we get the color for the star per our current index and set it:
 
@@ -826,7 +842,7 @@ from this array so that we get called when the raster reaches it:
 \end{lstlisting}
 
 In this instance we're setting the value to \icode{\$48} (72). So when the next interrupt\index{interrupt} happens it will reveal
-the star we just prepared. THis is the one we took a peek at in Figure 1.10.
+the star we just prepared. This is the one we took a peek at in Figure 1.10.
 
 The next ten interrupts will continue to revisit \icode{DoStarfieldAnimation\index{DoStarfieldAnimation}}. Let's look at the screen\index{screen}
 as it unfolds through each of these interrupts:
@@ -835,7 +851,7 @@ as it unfolds through each of these interrupts:
     \centering
     \foreach \l in {5, 7, ...,23}
     {
-      \includegraphics[width=4cm]{titlescreen/title\l.png}%
+      \includegraphics[width=5.5cm]{titlescreen/title\l.png}%
     }%
 \caption{The next ten interrupts paint the starfield\index{starfield} on the screen\index{screen} until we reach the point at which we want to prepare
   the gilby sprites\index{sprites}.}
@@ -869,9 +885,9 @@ of jumping\index{jumping} rainbow\index{rainbow} gilbies\index{gilbies} somewher
 call it at this point in the raster's journey - because the raster hasn't reached that position in the screen\index{screen} yet
 (but will reach it shortly) so now is our opportunity to position the gilbies\index{gilbies} where we want them. 
 
-Since this is an animation\index{animation} sequence\index{sequence} we're managing the approach of \icode{UpdateJumping\-GilbyPositionsAndColors} is
+Since this is an animation\index{animation} sequence\index{sequence} we're managing, the approach of \icode{UpdateJumping\-GilbyPositionsAndColors} is
 simply to update their position on the screen\index{screen}. Calculating this new position is something that happens a little later
-in the routine\index{routine} \icode{Recalculate\-JumpingGilbyPositions} when we are nearer the bottom of the screen\index{screen}. This means the
+in another routine\index{routine} \icode{Recalculate\-JumpingGilbyPositions} when we are nearer the bottom of the screen\index{screen}. This means the
 position values we're picking up here are the initial ones set in the game's code:
 
 \begin{lstlisting}[escapechar=\%]
@@ -927,20 +943,18 @@ UpdateYPosJumpingGilbies%\index{UpdateYPosJumpingGilbies}%
         RTS
 \end{lstlisting}
 We can see in here the verbosity required to handle the most significant bit of the sprite's x co-ordinate. Just
-as with the starfield\index{starfield} we need a separate array (\icode{titleScreen\-GilbiesMSBXPosArray} to handle this in addition
-to arrays to manage the basic x/y positions themselves.
+as with the starfield\index{starfield} we need a separate array (\icode{titleScreen\-GilbiesMSBXPosArray}), in addition
+to arrays that manage the basic x/y positions themselves.
 
 With the gilbies\index{gilbies} prepared we fall through and update the starfield\index{starfield} again. Once that's done we're finished handling the
 current raster interrupt\index{interrupt}. This is followed by another dozen or so interrupts where we again just prepare stars for display
-and as the raster progress our gilbies\index{gilbies} are revealed.
+and as the raster progresses our gilbies\index{gilbies} are revealed.
 
 \begin{figure}[H]
     \centering
-    \foreach \l in {27, 29, ..., 55}
+    \foreach \l in {31, 33, ..., 49}
     {
-      \begin{subfigure}{0.3\textwidth}
-      \includegraphics[width=4cm]{titlescreen/title\l.png}%
-      \end{subfigure}
+      \includegraphics[width=5.5cm]{titlescreen/title\l.png}%
     }%
 \caption{Behold the gilbies\index{gilbies}.}
 \end{figure}
@@ -978,11 +992,11 @@ There's a relatively full agenda:
 \end{lstlisting}
 
 First of all we set the raster interrupt\index{interrupt} to line 16 at the top of the screen\index{screen} again, then we acknowledge the interrupt\index{interrupt}. The
-raster will continue its journey but because we're going to do this while it works its way the next 42 lines at the bottom 
+raster will continue its journey but because we're going to do this while it works its way through the next 42 lines at the bottom 
 of the screen\index{screen} we have more time than at any point previously\index{previously} to get things done.
 
 Adding the title sprites\index{sprites} is relatively light work. Just as with the gilbies\index{gilbies} we use a tight loop to paint each of them
-on the screen\index{screen}. THere's no animation\index{animation} to handle here.
+on the screen\index{screen}. There's no animation\index{animation} to handle here.
 
 \begin{lstlisting}[escapechar=\%]
 titleTextSpriteArray%\index{titleTextSpriteArray}%          .BYTE $20,BIG_I,BIG_R,BIG_I,BIG_D,BIG_I,BIG_S
@@ -1028,7 +1042,7 @@ are finally revealed.
 
 \begin{figure}[H]
     \centering
-    \foreach \l in {59, 61, ..., 81}
+    \foreach \l in {59, 61, ..., 70}
     {
       \begin{subfigure}{0.3\textwidth}
       \includegraphics[width=4cm]{titlescreen/title\l.png}%
@@ -1041,6 +1055,6 @@ And with that the title sequence\index{sequence} is finally up and running after
 
 \begin{figure}[H]
     \centering
-      \includegraphics[width=12cm]{titlescreen/title89.png}%
+      \includegraphics[width=10cm]{titlescreen/title89.png}%
 \caption{We're done here.}
 \end{figure}
